logo and app name - someone fix logo spacing pl0x

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -24,3 +24,10 @@
   justify-content: space-around;
   align-items: center;
 }
+
+#camera {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
